# AutomatedMenuManagementSystem

./: .gitignore  AutomatedMenuManagementSystem.c  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  test_automated_menu_management.c
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug-report.md  feature-request.md
.github/workflows/: ci.yml
docs/: documentation.md  index.html
src/: AutomatedMenuManagementSystem.c  AutomatedMenuManagementSystem.h
tests/: test_automated_menu_management.c
